更换文案以及logo

--- a/packages/react-app/public/template.html
+++ b/packages/react-app/public/template.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=\, initial-scale=1.0"
 		/>
-		<title>Dify Chat</title>
+		<title>门店选址决策助手</title>
 		<!-- favicon -->
 		<link
 			rel="icon"
